# rust-webhook-test

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: main.yaml
src/: lib.rs  main.rs
src/message_checks/: bad_words.rs  copypasta.rs  mod.rs  twitter.rs  webm.rs
src/routines/: birthdays.rs  mod.rs  thursday.rs  utils.rs
